fixed gitalk css comment styles for dark mode

--- a/src/assets/scss/gitalk/gitalk.css
+++ b/src/assets/scss/gitalk/gitalk.css
@@ -1308,9 +1308,7 @@
 .gt-container .gt-link {
   border-bottom: 1px dotted #d14;
 }
-.gt-container .gt-comment-content {
-  background-color: inherit;
-}
+
 .gt-container .gt-comment-header {
   font-size: inherit;
 }
